192.168.50.129/kompose/k8s/redmine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: redmine.192.168.50.129.nip.io
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.31.2 (HEAD)
    kompose.volume.size: 1Gi
    kompose.volume.storage-class-name: standard
    kompose.volume.type: persistentVolumeClaim
  creationTimestamp: null
  labels:
    io.kompose.service: redmine
  name: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.service.expose: redmine.192.168.50.129.nip.io
        kompose.service.expose.ingress-class-name: nginx
        kompose.version: 1.31.2 (HEAD)
        kompose.volume.size: 1Gi
        kompose.volume.storage-class-name: standard
        kompose.volume.type: persistentVolumeClaim
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: redmine
    spec:
      containers:
        - env:
            - name: REDMINE_DB_DATABASE
              value: redmine
            - name: REDMINE_DB_PASSWORD
              value: redmine
            - name: REDMINE_DB_POSTGRES
              value: postgres
            - name: REDMINE_DB_USERNAME
              value: redmine
            - name: REDMINE_PLUGINS_MIGRATE
              value: "true"
            - name: TZ
              value: Asia/Seoul
          image: redmine
          name: redmine
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/redmine/files
              name: rm-files
            - mountPath: /usr/src/redmine/plugins
              name: rm-plugins
            - mountPath: /usr/src/redmine/public/themes
              name: rm-themes
      restartPolicy: Always
      volumes:
        - name: rm-files
          persistentVolumeClaim:
            claimName: rm-files
        - name: rm-plugins
          persistentVolumeClaim:
            claimName: rm-plugins
        - name: rm-themes
          persistentVolumeClaim:
            claimName: rm-themes
status: {}
