192.168.50.129/kompose/k8s/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: jenkins.192.168.50.129.nip.io
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.31.2 (HEAD)
    kompose.volume.size: 1Gi
    kompose.volume.storage-class-name: standard
    kompose.volume.type: persistentVolumeClaim
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.192.168.50.129.nip.io
      http:
        paths:
          - backend:
              service:
                name: jenkins
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
